Fix warning from sonarcloud MU-137